# CLI

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
include/log_analyzer/: parser.h  record.h  stats.h
scripts/: demo_gdb.sh  run_strace.sh  run_valgrind.sh
src/: main.cpp  parser.cpp  stats.cpp
tests/: test_parser.cpp  test_stats.cpp
